openpearl-code/testsuite/must_not_compile/01_typeFixed/005_length_fixed_missingparanthesis.expect
005_length_fixed_missingparanthesis.prl:4:13: ERROR : Syntax error :missing '(' at '15'
LENGTH FIXED 15;
              ^
005_length_fixed_missingparanthesis.prl:4:15: ERROR : Syntax error :missing ')' at ';'
LENGTH FIXED 15;
               ^
