openpearl-code/testsuite/must_not_compile/01_typeFixed/005_length_fixed_missingparanthesis.prl
MODULE(m1);

PROBLEM;
LENGTH FIXED 15;

MODEND;

